src/objects/ADvendio__Forecast__c.object
<CustomObject>
    <description>The forecast object is used to calculate the forecasted revenue and revenue split. Records can be created manually or by using the Advendio Revenue Forecast wizard.</description>
    <fields>
        <fullName>ADvendio__AdvertiserAgencyRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filled in automatically if Advertiser and Agency are chosen and if the user creates this records using the ADvendio Forecast Wizard.</description>
        <label>Advertiser-Agency Relation</label>
        <referenceTo>ADvendio__Advertiser_Agency_relation__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please pick an Advertiser if applicable</description>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts (Advertiser)</relationshipLabel>
        <relationshipName>ForecastsAdvertiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please pick an Agency if applicable</description>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts (Agency)</relationshipLabel>
        <relationshipName>ForecastsAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount__c</fullName>
        <description>Amount will be compared to actuals in the Forecast.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <description>End of forecast period - Calculated automatically out of period and start date.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media__c</fullName>
        <description>Which media do you forecast for?</description>
        <label>Media</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Period__c</fullName>
        <description>Please choose for which period your forecast is valid. Is used to automatically calculate the end date.</description>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>month</fullName>
                </value>
                <value>
                    <fullName>quarter</fullName>
                </value>
                <value>
                    <fullName>year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please choose a sales representative to forecast on, otherwise filled in automatically.</description>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedPublicationDates__c</fullName>
        <description>Mark all relevant publication dates if applicable.</description>
        <label>Selected Publication Dates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Which site do you forecast for?</description>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <description>When does your forecast period start?</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__PublisherGoal</fullName>
        <active>true</active>
        <label>Publisher Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SalesGoal</fullName>
        <active>true</active>
        <label>Sales Goal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>